--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" type="module"></script>
     <title>Mines Weeper</title>
 </head>
 <body>
-    
+    <h3 class="title">Minesweeper</h3>
+    <div class="subtext">
+        Mines Left: 10
+    </div>
+    <div class="board"></div>
 </body>
 </html>
